tests/rosetta/out/Java/15-puzzle-solver.java
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
// 15-puzzle-solver.mochi
class testpkg {
    static int Add(int a, int b) { return a + b; }
    static double Pi = 3.14;
    static int Answer = 42;
}
public class M15PuzzleSolver {
    public static void main(String[] args) {
        System.out.println(testpkg.FifteenPuzzleExample());
    }
}
